<resources>
    <string name="app_name">Groundforce</string>
    <string name="hello_blank_fragment_str">Hello blank fragment</string>
    <string name="get_things_done_str">Don\'t Get Too Far To \nGet Things Done</string>
    <string name="distance_is_not_a_barrier_str">Distance is not a barrier. Verify addresses close to you and earn cool cash!</string>
    <string name="get_started_str">Get Started</string>
    <string name="screen1_header_str">Earn Because You \nLive Where You Live</string>
    <string name="screen1_subText_str">Complete simple tasks on your mobile phone and around your location.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing_background_desc_str">BackgroundImage</string>
    <string name="landing_welcome_str">Welcome Trooper</string>
    <string name="landing_sub_welcome_str">Nice To Meet You!</string>
    <string name="landing_create_account_str">Create Account</string>
    <string name="landing_sign_up_str">I\'m Not New Here</string>
    <string name="landing_sign_up_with_google_str">Sign Up With Google</string>
    <string name="phone_verif_text_verify_str">Please enter the 4 digit code sent to you at 0801 **** 678</string>
    <string name="email_verification_title_str">Please enter the 4 digit code sent to you at kehinde@gmail.com</string>
    <string name="phone_verif_didnt_get_code_text_str">Didn\'t get the code? Resend.</string>
    <string name="email_verify_didnt_get_code_text_str">Didn\'t get the code? Resend.</string>
    <string name="phone_verif_phone_sms_str">Phone SMS</string>
    <string name="phone_verif_tool_bar_arrow_str">tool bar arrow for phone verification screen</string>
    <string name="phone_activ_tool_bar_arrow_str">tool bar arrow for phone activation screen</string>
    <string name="phone_verif_confirm_str">Confirm</string>
    <string name="email_verify_confirm_str">Confirm</string>
    <string name="phone_verif_phone_activation_str">Phone Activation</string>
    <string name="phone_activ_phone_verification_str">Phone Verification</string>
    <string name="phone_activ_phone_phone_number_str">Enter Phone Number</string>
    <string name="phone_activ_info_user_str">We\'ll text you a code to verify your mobile number.</string>
    <string name="phone_activ_t_and_c_str">By clicking \"Continue\", you are accepting our Terms &amp; Conditions as well as our Privacy Policy</string>
    <string name="phone_activ_continue_str">Continue</string>
    <string name="main_title_transition">mainTitleTransition</string>
    <string name="sub_title_transition">subTitleTransition</string>
    <string name="login_button_transition">loginButtonTransition</string>
    <string name="google_button_transition">googleButtonTransition</string>
    <string name="location_verification_str">Location Verification</string>
    <string name="location_verification_message">Please ensure you are at the location you entered while registering</string>
    <string name="location_verifcation_status">Verifying location...</string>
    <string name="screen_4_title_str">Do More, Earn More \nWith Groundforce</string>
    <string name="screen_4_subtitle_str">More missions, more surveys, more money!</string>
    <string name="screen_4_iv_content_desc_str">Lagos Lady using GroundForce App</string>
    <string name="create_profile_str">Create Profile</string>
    <string name="just_the_basics_str">Just the basics</string>
    <string name="first_name_str">First Name</string>
    <string name="Chinwendu_str">Chinwendu</string>
    <string name="last_name_str">Last Name</string>
    <string name="gbadamosi_str">Gbadamosi</string>
    <string name="date_of_birth_str">Date Of Birth</string>
    <string name="gender_str">Gender</string>
    <string name="religion_str">Religion</string>
    <string name="next_step_str">Next Step</string>
    <string name="upload_image">Upload Image</string>
    <string name="blank_phone_number_input_str">Phone number field can not be blank</string>
    <string name="invalid_phone_number_input_str">Invalid phone number. Double check your information and try again.</string>
    <string name="kehinde_emaildomain_com_str">kehinde@emaildomain.com</string>
    <string name="additional_phone_number_str">Additional Phone Number</string>
    <string name="_08023456789_str">08023456789</string>
    <string name="residence_address_str">Residence Address</string>
    <string name="bank_details_str">Bank Details</string>
    <string name="email_address_str">Email Address</string>
    <string name="bank_name_str">Bank Name</string>
    <string name="_0801234567890_str">0801234567890</string>
    <string name="done_profile_str">Done</string>
    <string-array name="sex">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="religion">Religion</string>
    <string-array name="bank">
        <item>GTBank</item>
        <item>Access</item>
        <item>UBA</item>
        <item>FirstBank</item>
        <item>FCMB</item>
        <item>Sterling Bank</item>
    </string-array>
    <string name="login_sub_title_str">Login to continue</string>
    <string name="login_str">Login</string>
    <string name="pin_text_str">Pin</string>
    <string name="new_user_register_here_str">New user? Register here.</string>
    <string name="forgot_password_str">Forgot password?</string>
    <string name="forgot_password_forgot_str">Enter your e-mail address and we will send you a link to reset your password</string>
    <string name="email_address_forgot_str">Email Address</string>
    <string name="forgot_your_password_str">Forgot your password?</string>
    <string name="reset_str">Reset</string>
    <string name="_10_14_str">10/14</string>
    <string name="contact_details_str">Contact details</string>
    <string name="reset_password_title_str">Reset Password</string>
    <string name="reset_password_str">Reset Password</string>
    <string name="new_password_str">NEW PASSWORD</string>
    <string name="confirm_password_str">CONFIRM PASSWORD</string>
    <string name="confirm_password_change_btn_str">Confirm Password Change </string>
    <string name="begin_survey_instructions_str">Instructions</string>
    <string name="begin_survey_confirm_age_str">Confirm that participant is above 21 years of age. </string>
    <string name="begin_survey_confirm_professional_str">Confirm that participant is a working professional.</string>
    <string name="begin_survey_confirm_date_str">Survey ends 24th November, 2020.</string>
    <string name="begin_survey_button_text_str">Begin Survey</string>
    <string name="survey_questions_title_str">1 of 10</string>
    <string name="survey_questions_question_str">Which of these companies are you most likely to work with?</string>
    <string name="survey_questions_option_one_str">Option 1</string>
    <string name="survey_questions_option_two_str">Option 2</string>
    <string name="survey_questions_option_three_str">Option 3</string>
    <string name="survey_questions_next_button_str">Next</string>
    <string name="agentDashboard_page_title_str">Home</string>
    <string name="agentDashboard_name_str">Hello Kehinde</string>
    <string name="agentDashboard_date_str">Sept 31, 2020</string>
    <string name="agentDashboard_totalearning_str">Total Earnings</string>
    <string name="agentDashboard_amount_str">NGN 0.00</string>
    <string name="agentDashboard_next_pay_day_str">Next Payout Date: Jan 00, 0000</string>
    <string name="agentDashboard_details_str">See Details</string>
    <string name="agentDashboard_tasks_str">Tasks</string>
    <string name="agentDashboard_mission_str">Missions</string>
    <string name="agentDashboard_survey_str">Surveys</string>
    <string name="agentDashboard_active_str">Active</string>
    <string name="agentDashboard_activity_str">Activity</string>
    <string name="agentDashboard_mission_completed_str">Missions Completed</string>
    <string name="agentDashboard_mission_completed_num_str">0</string>
    <string name="agentDashboard_view_details_str">View Details</string>
    <string name="agentDashboard_mission_survey_num_str">0</string>
    <string name="agentDashboard_survey_completed_str">Surveys Completed</string>
    <string name="agentDashboard_user_name">Hello, Trooper</string>
    <string name="agentDashboard_view_profile">View Profile</string>
    <string name="agentDashboard_home_str">Home</string>
    <string name="agentDashboard_payment_str">Payment History</string>
    <string name="agentDashboard_security_str">Security</string>
    <string name="agentDashboard_help_str">Help</string>
    <string name="agentDashboard_contact_str">Contact Us</string>
    <string name="agentDashboard_logout_str">Logout</string>
    <string name="mission_tab_title_str">Tasks</string>
    <string name="mission_accept_btn_str">ACCEPT</string>
    <string name="mission_decline_btn_str">DECLINE</string>
    <string name="mission_address_sub_str">31, Opebi Street, Ikeja, Lagos.</string>
    <string name="mission_address_title_str">Ikeja, GRA</string>
    <string name="ongoing_verify_btn_str">VERIFY</string>
    <string name="_title_str">Mission Report</string>
    <string name="mission_report_intro_str">Please fill while at given address</string>
    <string name="mission_report_first_qus_str">Does the given address exist?</string>
    <string name="mission_report_first_hint_str">&quot;31, Opebi Street, Ikeja, Lagos.&quot;</string>
    <string name="radio_yes_str">Yes</string>
    <string name="radio_no_str">No</string>
    <string name="landmark_hint_str">e.g a police barracks</string>
    <string name="nearest_bus_stop_str">Nearest Bus Stop</string>
    <string name="nearest_landmark_str">Nearest Landmark</string>
    <string name="type_of_structure_str">Type Of Structure</string>
    <string name="absolute_coordinates_str">Absolute Coordinates</string>
    <string name="coord_str">6° 27\' 55.5192\'\' N and 3° 24\' 23.2128\'\' E</string>
    <string name="additional_comments_str">Additional Comments</string>
    <string name="submit_str">submit</string>
    <string name="cancel_str">Cancel</string>
    <string name="label_str">Label</string>
    <string name="mission_error_str">Field cannot be empty</string>
    <string name="report_saved_str">Report saved</string>
    <string name="kehinde_oladimeji_str">Kehinde Oladimeji</string>
    <string name="kehindeemaildomain_gmail_com_str">kehindeemaildomain@gmail.com</string>
    <string name="bank_details_str_user">Bank details</string>
    <string name="save_changes_str">Save Changes</string>
    <string name="profile_str">Profile</string>
    <string name="forgot_password_desc_str">Reset Password</string>
    <string name="email_address_hint_str">Email</string>
    <string name="login_header_text_str">Welcome Trooper</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_password">You are almost there. Please enter your new pin</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="forgot">Forgot?</string>
    <string name="reset">Reset</string>
    <string name="location_verified_dialog_ok_str">OK</string>
    <string name="n100_str">N100</string>
    <string name="you_have_received_n100_str">You have received N100</string>
    <string name="_18th_sept_2020_str">18th Sept, 2020</string>
    <string name="confirm">Confirm</string>
    <string name="to_continue_sub_str">to continue</string>
    <string name="please_enter_current_password_str">Please enter current password</string>
</resources>