<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/border_bottom"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/single_payment_history_amout_value_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/n100_str"
        style="@style/TextPrimaryLargeText"/>

    <TextView
        android:id="@+id/single_payment_history_have_recieved_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/you_have_received_n100_str"
        style="@style/TextPrimarySmallText" />

    <TextView
        android:id="@+id/single_payment_history_payment_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/_18th_sept_2020_str"
        style="@style/TextPrimaryExtraSmallText" />
</LinearLayout>