<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/forget_password_iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/lock"
        app:tint="@color/colorPrimary"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/forget_password_main_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password_str"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:fontFamily="@font/titillium_web_bold"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/forget_password_sub_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_forgot_str"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_main_text_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/forget_password_TextEmailAddress_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/email_address_forgot_str"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/forget_password_sub_text_tv"
        />
    <Button
        android:id="@+id/forget_password_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_primary_shapes"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/reset_str"
        android:transitionName="@string/google_button_transition"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_TextEmailAddress_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>