<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_change_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_web_bold"
            android:gravity="center"
            android:text="@string/please_enter_current_password_str"
            style="@style/colorPrimaryBlackLargeText" />

        <TextView
            android:id="@+id/fragment_change_password_sub_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_web_bold"
            android:gravity="center"
            android:text="@string/to_continue_sub_str"
            style="@style/colorPrimaryBlackLargeText" />



        <com.mukesh.OtpView
            android:id="@+id/fragment_change_password_pin_view"
            style="@style/OtpWidget.OtpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:singleLine="false"
            android:textColor="@color/colorPrimaryBlack"
            android:textColorHint="@color/colorPrimaryBlack"
            app:itemSpacing="25dp"
            app:itemWidth="45dp"
            app:lineColor="@color/colorPrimaryBlack"
            app:lineWidth="2dp"
            app:viewType="line" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">


            <!--            Otp View-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_1"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="10dp"
                    android:text="@string/_1"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_2"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:elevation="10dp"
                    android:text="@string/_2"
                    style="@style/colorPrimaryBlackLargeText"
                    android:backgroundTint="@color/colorWhite"
                    app:cornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_push_button_1"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_change_password_push_button_3"
                    app:layout_constraintStart_toEndOf="@+id/fragment_change_password_push_button_1"
                    app:layout_constraintTop_toTopOf="@+id/fragment_change_password_push_button_1"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_3"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="24dp"
                    android:elevation="10dp"
                    android:text="@string/_3"
                    style="@style/colorPrimaryBlackLargeText"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_push_button_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fragment_change_password_push_button_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_4"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    android:elevation="10dp"
                    android:text="@string/_4"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_5"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:elevation="10dp"
                    android:backgroundTint="@color/colorWhite"
                    app:cornerRadius="30dp"
                    android:text="@string/_5"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_push_button_4"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_change_password_push_button_6"
                    app:layout_constraintStart_toEndOf="@+id/fragment_change_password_push_button_4"
                    app:layout_constraintTop_toTopOf="@+id/fragment_change_password_push_button_4" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_6"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="24dp"
                    android:elevation="10dp"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    android:text="@string/_6"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_push_button_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fragment_change_password_push_button_5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_7"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="10dp"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    android:text="@string/_7"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_8"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:elevation="10dp"
                    android:text="@string/_8"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_push_button_7"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_change_password_push_button_9"
                    app:layout_constraintStart_toEndOf="@+id/fragment_change_password_push_button_7"
                    app:layout_constraintTop_toTopOf="@+id/fragment_change_password_push_button_7" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_9"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="24dp"
                    android:elevation="10dp"
                    android:text="@string/_9"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_change_password_push_button_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fragment_change_password_push_button_8" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_change_password_push_button_0"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="10dp"
                    android:text="@string/_0"
                    app:cornerRadius="30dp"
                    android:backgroundTint="@color/colorWhite"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/fragment_change_password_forgot_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/forgot"
                    style="@style/colorPrimaryBlackLargeText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.51" />

                <ImageView
                    android:id="@+id/fragment_change_password__delete_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="40dp"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorPrimaryBlack" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/fragment_change_password_reset_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/confirm"
                android:background="@drawable/custom_white_rounded_bg"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/large_text"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>