<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second_screen_root_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.onboarding.OnBoardingScreen3Fragment">

    <ImageView
        android:id="@+id/second_screen_abj_girl_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/abj_girl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_screen_get_things_done_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/get_things_done_str"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_screen_abj_girl_iv" />

    <TextView
        android:id="@+id/second_screen_distance_not_barrier_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/distance_is_not_a_barrier_str"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/second_screen_get_things_done_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/second_screen_get_things_done_tv"
        app:layout_constraintTop_toBottomOf="@+id/second_screen_get_things_done_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>